# Ros2-Projects

src/my_cpp_pkg/: CMakeLists.txt  package.xml
src/my_cpp_pkg/src/: turtle_controller.cpp  turtlesim_spawner.cpp
src/my_robot_bringup/: package.xml
src/my_robot_bringup/launch/: turtle_catch_them_all.launch.py
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/msg/: AliveTurtles.msg
src/my_robot_interfaces/srv/: KillTurtle.srv
src/turtle_game/: CMakeLists.txt  package.xml
src/turtle_game/src/: turtle_controller.cpp
